fixed extend of background

--- a/src/partials/main/footer.hbs
+++ b/src/partials/main/footer.hbs
@@ -1,4 +1,6 @@
 <footer>
-
-
+    <ul class="pure-menu-list nav-footer">
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
+        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sources</a></li>
+    </ul>
 </footer>
